1. 修改了订单详情的显示方式 2. 商品名称前添加最后修改月份

--- a/components/accountCard/accountCard.wxml
+++ b/components/accountCard/accountCard.wxml
@@ -16,10 +16,10 @@
     </view>
   </view>
   <view class="order-info">
-    <view class="item" wx:if="{{data.sheetQty}}">
+    <!-- <view class="item" wx:if="{{data.sheetQty}}">
       <text class="label">订单数量：</text>
       <text class="content">{{data.sheetQty}}</text>
-    </view>
+    </view> -->
     <view class="item" wx:if="{{data.sheetAmt}}">
       <text class="label">金额：</text>
       <text class="content">￥{{data.sheetAmt}} </text>
