--- a/pages/goodDetail/goodDetail.wxml
+++ b/pages/goodDetail/goodDetail.wxml
@@ -1,88 +1,168 @@
 <!-- pages/goodDetail/goodDetail.wxml -->
-<Navbar title='商品详情' background='linear-gradient(to bottom right, rgb(241, 149, 139), #FF4E3E)' />
+<Navbar title='{{type == 1 ? "商品详情" : "编辑商品"}}' background='linear-gradient(to bottom right, rgb(241, 149, 139), #FF4E3E)' />
 <view class="good-detail-container">
   <view class="input-box">
     <label>商品条码：</label>
-    <input disabled value='{{data.itemSubno}}'></input>
+    <input 
+      type="number"
+      bindinput='bindInputData' 
+      disabled="{{type == 1 ? true : false}}" 
+      value='{{data.itemSubno}}'
+      data-inputName="itemSubno"
+    ></input>
   </view>
   <view class="input-box">
     <label>商品货号：</label>
-    <input disabled value='{{data.itemNo}}'></input>
+    <input 
+      type="number"
+      bindinput='bindInputData' 
+      disabled="{{type == 1 ? true : false}}" 
+      value='{{data.itemNo}}'
+      data-inputName="itemNo"
+    ></input>
   </view>
   <view class="input-box">
     <label>商品名称：</label>
-    <input class="good-name" disabled value='{{data.itemName}}'></input>
+    <input 
+      class="good-name" 
+      disabled="{{type == 1 ? true : false}}" 
+      value='{{data.itemName}}'
+      data-inputName="itemName"
+    ></input>
   </view>
   <view class="input-box">
     <label>入驻商名称：</label>
-    <input disabled value='{{data.supplierName}}'></input>
+    <input 
+      bindinput='bindInputData' 
+      disabled="{{type == 1 ? true : false}}" 
+      value='{{data.supplierName}}'
+      data-inputName="supplierName"
+    ></input>
   </view>
   <view class="input-box">
     <label>入驻商编号：</label>
-    <input disabled value='{{supplierNo}}'></input>
+    <input 
+      type="number"
+      bindinput='bindInputData' 
+      disabled
+      value='{{data.supplierNo}}'
+      data-inputName="supplierNo"
+    >
+    </input>
   </view>
   <view class="input-box">
-    <label>供应商编号：</label>
-    <input disabled value='{{data.deliveryType}}'></input>
+    <label>最后修改时间：</label>
+    <input disabled value='{{data.modifyDate}}'>
+    </input>
   </view>
+  <!-- <view class="input-box">
+    <label>供应商编号：</label>
+    <input 
+      type="number"
+      bindinput='bindInputData' 
+      disabled="{{type == 1 ? true : false}}" 
+      value='{{data.deliveryType}}'
+      data-inputName="deliveryType"
+    ></input>
+  </view> -->
   <view class='good-props'>
     <view class="input-box">
-      <label>进 货 价：</label>
-      <input disabled value='￥{{data.price}}'></input>
+      <label>进 货 价(￥)：</label>
+      <input 
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.price}}'
+        data-inputName="price"
+      ></input>
     </view>
     <view class="input-box">
-      <label>建议零售价：</label>
-      <input disabled value='￥{{data.salePrice}}'></input>
+      <label>建议零售价(￥)：</label>
+      <input 
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.salePrice}}'
+        data-inputName="salePrice"
+      ></input>
     </view>
   </view>
   <view class='good-props'>
     <view class="input-box">
       <label>毛 利 率：</label>
-      <input disabled value='{{data.profit}}'></input>
+      <input 
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.profit}}'
+        data-inputName="profit"     
+      ></input>
     </view>
   </view>
   <view class='good-props'>
     <view class="input-box">
       <label>类别：</label>
-      <input disabled value='{{data.itemClsno}}'></input>
+      <input 
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.itemClsno}}'
+        data-inputName="itemClsno"
+     ></input>
+    </view>
+  </view>
+  <view class='good-props'>
+    <view class="input-box">
+      <label>单位：</label>
+      <input 
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.unit}}'
+        data-inputName="unit"
+     ></input>
     </view>
   </view>
   <view class='good-props'>
     <view class="input-box" wx:if="{{data.minSupplyQty}}">
       <label>单次起订：</label>
-      <input disabled value='{{data.minSupplyQty + data.unit}}'></input>
+      <input 
+        type="number"
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.minSupplyQty}}'
+        data-inputName="minSupplyQty"
+      ></input>
     </view>
     <view class="input-box" wx:if="{{data.minSupplyQty}}">
       <label>单次限购：</label>
-      <input disabled value='{{data.maxSupplyQty + data.unit}}'></input>
+      <input 
+        type="number"
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.maxSupplyQty}}'
+        data-inputName="maxSupplyQty"
+      ></input>
     </view>
   </view>
   <view class='good-props'>
     <view class="input-box">
       <label>配送规格：</label>
-      <input disabled value='{{data.supplySpec + data.unit}}'></input>
+      <input 
+        type="number"
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.supplySpec}}'
+        data-inputName="supplySpec"
+      ></input>
     </view>
     <view class="input-box">
       <label>库存数量：</label>
-      <input disabled value='{{data.stockQty + data.unit}}'></input>
+      <input 
+        type="number"
+        bindinput='bindInputData' 
+        disabled="{{type == 1 ? true : false}}" 
+        value='{{data.stockQty}}'
+        data-inputName="stockQty"
+      ></input>
     </view>
   </view>
-  <!-- <view class='good-props'>
-    <view class="input-box">
-      <label>商品规格：</label>
-      <input disabled value='{{data.supplySpec}}'></input>
-    </view>
-    <view class="input-box">
-      <label>配送方式：</label>
-      <input disabled value='A0002'></input>
-    </view>
-  </view> -->
-  <!-- <view class='good-props'>
-    <view class="input-box">
-      <label>保质期(天)：</label>
-      <input disabled value='A0002'></input>
-    </view>
-  </view> -->
+
   <view class='good-pic'>
     <view class="input-box">
       <label>商品图片：</label>
@@ -93,6 +173,15 @@
   </view>
 </view>
 
+<!-- 修改商品信息 Dialog -->
+<!-- <view class="print-order-box" wx:if="{{ supplyFlag == 3 && isShowEnterCarDialog}}">
+  <view class="print-order" >
+    <view class="title">{{}}</view>
+    <input></input>
+  </view>
+</view> -->
+
+<!-- btn 区域 -->
 <view bindtap="upOrDownClick">
   <button 
     data-status="1"
@@ -104,10 +193,21 @@
 
   <button 
     data-status="0"
-    wx:if="{{data.status == 1}}" 
+    wx:if="{{data.status == 1 && type == 1}}" 
     style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin-top: 180rpx;" 
     type='primary'
   >
-    下架</button>
+    下架
+  </button>
 </view>
+
+<button 
+    bindtap="editConfirmClick"
+    data-status="0"
+    wx:if="{{type == 0}}" 
+    style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin-top: 120rpx;" 
+    type='primary'
+  >
+    确认编辑
+  </button>
 
