--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -54,13 +54,14 @@
         <view class="table-name">
           <TextItems 
             boxStyle="border: 0rpx;"
-            itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
+            itemStyle="font-size: 28rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right: 0rpx;" 
             labelStyle="color: #5C5C5C;"  
+            contentStyle="overflow: hidden;text-overflow:ellipsis;white-space: nowrap;width: 420rpx;"
             texrItemData="{{[{label: '', content: item.itemName}]}}" 
           />
           <TextItems 
             boxStyle="border: 0rpx;"
-            itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;" 
+            itemStyle="font-size: 28rpx;letter-spacing: 0rpx;padding:8rpx 0;" 
             labelStyle="color: #5C5C5C;"  
             texrItemData="{{[{label: '条码：', content: item.itemSubno}]}}" 
           />
@@ -95,6 +96,7 @@
 <view class="print-order-box" wx:if="{{isShowGoodDetailDialog}}" bindtap="hideDlalogClick">
   <view class="goods-card-box" style="background: #fff;width:85%;border-radius:10rpx;"> 
   <block>
+    <view class="detail-title">商品详情</view>
     <view class="image-box">
       <image src="{{detailData.details[currentGoodIndex].imgImg}}"/>
     </view>
@@ -102,33 +104,33 @@
       <view class="item">
         <TextItems 
           boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;" 
+          itemStyle="font-size: 30rpx;letter-spacing: 0rpx;padding:8rpx 0;" 
           labelStyle="color: #5C5C5C;"  
           texrItemData="{{[{label: '条码：', content: detailData.details[currentGoodIndex].itemSubno}]}}" 
         />
         <TextItems 
           boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
+          itemStyle="font-size: 30rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
           labelStyle="color: #5C5C5C;"  
           texrItemData="{{[{label: '品名：', content: detailData.details[currentGoodIndex].itemName}]}}" 
         />
         <TextItems 
           boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
+          itemStyle="font-size: 30rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
           labelStyle="color: #5C5C5C;"  
           contentStyle="white-space: nowrap;"
           texrItemData="{{[{label: '包装规格：', content:detailData.details[currentGoodIndex].itemSize}, {label: '要货数量：', content:detailData.details[currentGoodIndex].realQty +detailData.details[currentGoodIndex].unitNo}]}}" 
         />
         <TextItems 
           boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
+          itemStyle="font-size: 30rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
           labelStyle="color: #5C5C5C;"  
           contentStyle="color: #FF4E3E;"
           texrItemData="{{[{label: '单价：', content: '￥'+detailData.details[currentGoodIndex].validPrice}]}}" 
         />
         <TextItems 
           boxStyle="border: 0rpx;"
-          itemStyle="font-size: 24rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
+          itemStyle="font-size: 30rpx;letter-spacing: 0rpx;padding:8rpx 0;margin-right:50rpx;" 
           labelStyle="color: #5C5C5C;"  
           contentStyle="color: #FF4E3E;"
           texrItemData="{{[{label: '总价：', content: '￥'+detailData.details[currentGoodIndex].subAmt}]}}" 
@@ -203,9 +205,11 @@
 
 <!-- <image wx:if="{{orderStatu == 0}}" bindtap="print" src="../../images/orderDetailPrint.png" class="printBtn" />
 <image wx:if="{{orderStatu == 1}}" bindtap="print" src="../../images/makeCarbtn.png" class="printBtn" /> -->
-<button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="print" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin-top: 160rpx;background: linear-gradient(to bottom right, #3BB0EC, #245EF7);" type='primary'>打印/拣货</button>
+<button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="print" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 100rpx auto 0;background: linear-gradient(to bottom right, #3BB0EC, #245EF7);" type='primary'>打印/拣货</button>
 
-<button wx:if="{{supplyFlag == 3}}" bindtap="makeCar" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin-top: 160rpx;background: linear-gradient(to bottom right, #FFB910, #FF8200);" type='primary'>装车</button>
+<button wx:if="{{supplyFlag == 1 || supplyFlag == 2}}" bindtap="warehouseOut" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 40rpx auto;background: linear-gradient(-120deg, #3BB0EC, #245EF7);" type='primary'>出库</button>
+
+<button wx:if="{{supplyFlag == 3}}" bindtap="makeCar" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin: 160rpx auto;background: linear-gradient(120deg, #FFB910, #FF8200);" type='primary'>装车</button>
 
 
 
