--- a/pages/orderStatu/orderStatu.wxss
+++ b/pages/orderStatu/orderStatu.wxss
@@ -7,7 +7,14 @@ page {
   width: 330rpx;
 }
 
-
+.selecter-time-conainer {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  background-color: rgba(0,0,0,.4);
+}
 .d-container{
   display: flex;
   justify-content: space-start;
@@ -289,4 +296,14 @@ border-radius: 50rpx;
 
 .btn-box text:nth-child(2){
   color: #3dae3f;
+}
+
+
+.print-btn-box {
+  display: flex;
+  width: 99px;
+  height: 55px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
