--- a/pages/booth/booth.wxml
+++ b/pages/booth/booth.wxml
@@ -9,25 +9,42 @@
 </wxs>
 <view class="container">
   <view class="page-section">
-    <view class="devices-summary">已发现 {{devices.length}} 个外围设备：</view>
+
+    <view class="devices-summary">请选择您的设备：</view> 
     <scroll-view class="device-list" scroll-y scroll-with-animation>
+      <view 
+        data-device-id="{{fixedDevices.deviceId}}" 
+        data-name="{{fixedDevices.name || fixedDevices.localName}}" 
+        bindtap="createBLEConnection" 
+        class="device-item" 
+        hover-class="device-item-hover"
+      >
+        <view class="item-name"  style="font-size: 16px; color: #333;">设备名称: 济强 {{fixedDevices.name}}</view>
+        <view  style="font-size: 10px">UUID: {{fixedDevices.deviceId}}</view>
+      </view>
+    </scroll-view>
+
+    <!-- <view class="devices-summary">已发现 {{devices.length}} 个外围设备：</view> -->
+    <!-- <scroll-view class="device-list" scroll-y scroll-with-animation>
       <view wx:for="{{devices}}" wx:key="index" data-device-id="{{item.deviceId}}" data-name="{{item.name || item.localName}}" bindtap="createBLEConnection" class="device-item" hover-class="device-item-hover">
         <view style="font-size: 16px; color: #333;">{{item.name}}</view>
         <view style="font-size: 10px">信号强度: {{item.RSSI}}dBm ({{utils.max(0, item.RSSI + 100)}}%)</view>
         <view style="font-size: 10px">UUID: {{item.deviceId}}</view>
         <view style="font-size: 10px">Service数量: {{utils.len(item.advertisServiceUUIDs)}}</view>
       </view>
-    </scroll-view>
+    </scroll-view> -->
     <view class="btn-area">
     </view>
   </view>
-  <view class="page-section connected-area" wx:if="{{lastDevice}}">
+
+
+  <!-- <view class="page-section connected-area" wx:if="{{lastDevice}}">
     <text style="font-size: 30rpx">最近连接的设备</text>
     <view>{{lastDevice}}</view>
     <view class="btn-area">
       <button type="primary" bindtap="createBLEConnectionWithDeviceId">直接连接</button>
     </view>
-  </view>
+  </view> -->
   <view class="page-section connected-area" wx:if="{{connected}}">
     <view class="connected-info">
       <text style="font-size: 30rpx">已连接到 {{name}}</text>
