--- a/pages/goodDetail/goodDetail.wxml
+++ b/pages/goodDetail/goodDetail.wxml
@@ -1,39 +1,36 @@
 <!-- pages/goodDetail/goodDetail.wxml -->
 <Navbar title='{{type == 1 ? "商品详情" : "编辑商品"}}' background='linear-gradient(to bottom right, rgb(241, 149, 139), #FF4E3E)' />
 <view class="good-detail-container">
-  <view class="input-box" data-name='商品条码' bindtap="showEditDialogClick">
+  <view class="input-box" data-name='商品条码' data-inputName="itemSubno" bindtap="showEditDialogClick">
     <label id="edit-label">商品条码：</label>
     <input 
       type="number"
       bindinput='bindInputData' 
       disabled="{{type == 1 ? true : false}}" 
       value='{{data.itemSubno}}'
-      data-inputName="itemSubno"
     ></input>
   </view>
-  <view class="input-box" data-name='商品货号' bindtap="showEditDialogClick">
+  <view class="input-box" data-name='商品货号' data-inputName="itemNo" bindtap="showEditDialogClick">
     <label id="edit-label">商品货号：</label>
     <input 
       type="number"
       bindinput='bindInputData' 
       disabled="{{type == 1 ? true : false}}" 
       value='{{data.itemNo}}'
-      data-inputName="itemNo"
     ></input>
   </view>
-  <view class="input-box" data-name='商品名称' bindtap="showEditDialogClick">
+  <view class="input-box" data-name='商品名称' data-inputName="itemName" bindtap="showEditDialogClick">
     <label id="edit-label">商品名称：</label>
     <input 
       class="good-name" 
       disabled="{{type == 1 ? true : false}}" 
       value='{{data.itemName}}'
-      data-inputName="itemName"
     ></input>
   </view>
   
-  <view class="input-box" data-name='商品日期'>
+  <view wx:if="{{data.appNote}}" class="input-box" data-name='商品日期'>
     <label>商品日期：</label>
-    <input disabled value='{{data}}'>
+    <input disabled value='{{data.appNote}}'>
     </input>
   </view>
 
@@ -68,22 +65,20 @@
     ></input>
   </view> -->
   <view class='good-props'>
-    <view class="input-box" data-name='进 货 价(￥)' bindtap="showEditDialogClick">
+    <view class="input-box" data-inputName="price" data-name='进 货 价(￥)' bindtap="showEditDialogClick">
       <label id="edit-label">进 货 价(￥)：</label>
       <input 
         bindinput='bindInputData' 
         disabled="{{type == 1 ? true : false}}" 
         value='{{data.price}}'
-        data-inputName="price"
       ></input>
     </view>
-    <view class="input-box" data-name='建议零售价(￥)' bindtap="showEditDialogClick">
+    <view class="input-box" data-inputName="salePrice" data-name='建议零售价(￥)' bindtap="showEditDialogClick">
       <label id="edit-label">建议零售价(￥)：</label>
       <input 
         bindinput='bindInputData' 
         disabled="{{type == 1 ? true : false}}" 
         value='{{data.salePrice}}'
-        data-inputName="salePrice"
       ></input>
     </view>
   </view>
@@ -99,68 +94,62 @@
     </view>
   </view>
   <view class='good-props'>
-    <view class="input-box" data-name='类别'>
+    <view class="input-box" data-inputName="itemClsno" data-name='类别'>
       <label>类别：</label>
       <input 
         bindinput='bindInputData' 
         disabled
         value='{{data.itemClsno}}'
-        data-inputName="itemClsno"
      ></input>
     </view>
   </view>
   <view class='good-props'>
-    <view class="input-box" data-name='单位' bindtap="showEditDialogClick">
+    <view class="input-box" data-name='单位' data-inputName="unit" bindtap="showEditDialogClick">
       <label id="edit-label">单位：</label>
       <input 
         bindinput='bindInputData' 
         disabled="{{type == 1 ? true : false}}" 
         value='{{data.unit}}'
-        data-inputName="unit"
      ></input>
     </view>
   </view>
   <view class='good-props'>
-    <view class="input-box" data-name='单次起订' bindtap="showEditDialogClick" wx:if="{{data.minSupplyQty}}">
+    <view class="input-box" data-name='单次起订' data-inputName="minSupplyQty" bindtap="showEditDialogClick" wx:if="{{data.minSupplyQty}}">
       <label id="edit-label">单次起订：</label>
       <input 
         type="number"
         bindinput='bindInputData' 
         disabled="{{type == 1 ? true : false}}" 
         value='{{data.minSupplyQty}}'
-        data-inputName="minSupplyQty"
       ></input>
     </view>
-    <view class="input-box" data-name='单次限购' bindtap="showEditDialogClick" wx:if="{{data.minSupplyQty}}">
+    <view class="input-box" data-name='单次限购' data-inputName="maxSupplyQty" bindtap="showEditDialogClick" wx:if="{{data.minSupplyQty}}">
       <label id="edit-label">单次限购：</label>
       <input 
         type="number"
         bindinput='bindInputData' 
         disabled="{{type == 1 ? true : false}}" 
         value='{{data.maxSupplyQty}}'
-        data-inputName="maxSupplyQty"
       ></input>
     </view>
   </view>
   <view class='good-props'>
-    <view class="input-box" data-name='配送规格' bindtap="showEditDialogClick">
+    <view class="input-box" data-name='配送规格' data-inputName="supplySpec" bindtap="showEditDialogClick">
       <label id="edit-label">配送规格：</label>
       <input 
         type="number"
         bindinput='bindInputData' 
         disabled="{{type == 1 ? true : false}}" 
         value='{{data.supplySpec}}'
-        data-inputName="supplySpec"
       ></input>
     </view>
-    <view class="input-box" data-name='库存数量' bindtap="showEditDialogClick">
+    <view class="input-box" data-name='库存数量' data-inputName="stockQty" bindtap="showEditDialogClick">
       <label id="edit-label">库存数量：</label>
       <input 
         type="number"
         bindinput='bindInputData' 
         disabled="{{type == 1 ? true : false}}" 
         value='{{data.stockQty}}'
-        data-inputName="stockQty"
       ></input>
     </view>
   </view>
