--- a/components/selectNavbar/selectNavbar.wxml
+++ b/components/selectNavbar/selectNavbar.wxml
@@ -1,13 +1,18 @@
 <!--components/selectNavbar/selectNavbar.wxml-->
 <view class="statu-navbar-box"> 
   <view class="item-box" bindtap="selectNavs">
-    <view 
+    <view
       style="{{itemStyle}}" 
-      class="item {{selectedNavIndex==index?'selected':''}}" 
       data-index="{{index}}" 
       wx:for="{{selectItemArray}}"
       wx:key="index"
-    >{{item}}</view>
+      class="item"
+    >
+      <view 
+        data-index="{{index}}"
+        class="text {{selectedNavIndex==index?'selected':''}}" 
+      >{{item}}</view>
+    </view>
   </view>
 </view>
 <view style="height: 88rpx;width: 100%;"></view>
