--- a/pages/editRoleData/editRoleData.wxml
+++ b/pages/editRoleData/editRoleData.wxml
@@ -50,7 +50,12 @@
   markers="{{[markers]}}"
   scale="16"
   circles="{{[circle]}}"
+  polygons="{{polygons}}"
 />
 
 <!-- <map id="map" longitude="113.324520" latitude="23.099994" scale="14" controls="{{controls}}" bindcontroltap="controltap" markers="{{markers}}" bindmarkertap="markertap" polyline="{{polyline}}" bindregionchange="regionchange" show-location style="width: 100%; height: 300px;"></map> -->
 <button bindtap="backLoginClick" style="height: 80rpx;width: 600rpx;border-radius: 50rpx;font-weight: 400;font-size: 30rpx;line-height: 50rpx;letter-spacing: 4rpx;margin-top: 60rpx;background: linear-gradient(to bottom right, #FF796D, #FF4E3E);" type='primary'>退出登录</button>
+<!-- 
+<view class="img_box">
+  <image src="{{src}}" />
+</view> -->
