--- a/pages/goodSearch/goodSearch.wxml
+++ b/pages/goodSearch/goodSearch.wxml
@@ -1,31 +1,85 @@
 <!--pages/goodSearch/goodSearch.wxml-->
 <Navbar title='搜索' background='linear-gradient(to bottom right, rgb(241, 149, 139), #FF4E3E)' />
 <view class="search-bar-container">
-  <view class="nav-seach-bar-box">
+	<view class="nav-seach-bar-box">
 		<image src='../../images/search.png' bindtap="searchOrder" />
-		<input type="text" class="nav-seach-bar" placeholder='请输入订单号或客户名称' placeholder-style='font-size: 26rpx;' value="{{searchValue}}" bindinput="inputBindValue" confirm-type="搜索" bindconfirm="searchOrder" />
+		<input type="text" class="nav-seach-bar" placeholder='请输入订单号或商品名称' placeholder-style='font-size: 26rpx;' value="{{searchValue}}" bindinput="inputBindValue" confirm-type="搜索" bindconfirm="searchOrder" />
 	</view>
-  <button bindtap="searchOrder" style="margin: 0 40rpx;" type="primary" size="mini">搜索</button>
+	<button bindtap="searchOrder" style="margin: 0 40rpx;" type="primary" size="mini">搜索</button>
 </view>
 
-
-<GoodCard 
-  wx:if="{{goodsData.length != 0}}" 
-  isAllSelected="{{isAllSelected}}" 
-  wx:for="{{goodsData}}" 
-  wx:key="index" 
-  goodsData="{{item}}" 
-  index="{{index}}" 
-/>
+<GoodCard wx:if="{{goodsData.length != 0}}" isAllSelected="{{isAllSelected}}" wx:for="{{goodsData}}" wx:key="index" goodsData="{{item}}" index="{{index}}" />
 
 <!-- 底边栏 -->
-	<view class="bottom-bar-box">
-		<view class="checkbox-box">
-			<radio bindtap='allSelected' value='all' color='#FF4E3E' checked='{{isAllSelected}}' class="all-selected" />
-			<view class="content">全选</view>
+<view class="bottom-bar-box">
+	<view class="checkbox-box">
+		<radio bindtap='allSelected' value='all' color='#FF4E3E' checked='{{isAllSelected}}' class="all-selected" />
+		<view class="content">全选</view>
+	</view>
+	<view class="botton-box">
+		<button bindtap="downClick" style="padding: 0;background: #02b972;height: 64rpx;font-size: 26rpx;line-height: 65rpx;margin: 0 0 0 28rpx;width: 140rpx;color: #fff;font-weight: 100;border-radius: 50rpx;">下架</button>
+		<button bindtap="upClick" style="padding: 0;background: #ff7164;height: 64rpx;font-size: 26rpx;line-height: 65rpx;margin: 0 0 0 28rpx;width: 140rpx;color: #fff;font-weight: 100;border-radius: 50rpx;">上架</button>
+	</view>
+</view>
+
+<!-- 修库存改操作 Diolog -->
+<view class="edit-container" wx:if='{{isShowEditDialog}}'>
+	<view class="edit-dialog">
+		<view class="title">修改库存</view>
+		<view class="current-stock">
+			<view class="label">当前库存：</view>
+			<view class="content">{{currentStock}}</view>
 		</view>
-		<view class="botton-box">
-			<button bindtap="downClick" style="padding: 0;background: #02b972;height: 64rpx;font-size: 26rpx;line-height: 65rpx;margin: 0 0 0 28rpx;width: 140rpx;color: #fff;font-weight: 100;border-radius: 50rpx;">下架</button>
-			<button bindtap="upClick" style="padding: 0;background: #ff7164;height: 64rpx;font-size: 26rpx;line-height: 65rpx;margin: 0 0 0 28rpx;width: 140rpx;color: #fff;font-weight: 100;border-radius: 50rpx;">上架</button>
+		<view class="input-item">
+			<view class="label">
+				<image src="{{inputActive == 'addNum' ? '../../images/inpSelect.png' : ''}}" class="{{inputActive == 'addNum' ? 'inputActive' : ''}} checkbox" />
+				<view class="name">增加：</view>
+			</view>
+			<input bindtap="focusClick" focus="{{editStockFocus.addNum}}" bindinput="editStockClick" value="{{editStockInputValue.addNum}}" data-type="addNum" />
 		</view>
+		<view class="input-item">
+			<view class="label">
+				<image src="{{inputActive == 'subNum' ? '../../images/inpSelect.png' : ''}}" class="{{inputActive == 'subNum' ? 'inputActive' : ''}} checkbox" />
+				<view class="name">减少：</view>
+			</view>
+			<input bindtap="focusClick" focus="{{editStockFocus.subNum}}" bindinput="editStockClick" value="{{editStockInputValue.subNum}}" data-type="subNum" />
+		</view>
+		<view class="input-item">
+			<view class="label">
+				<image src="{{inputActive == 'toNum' ? '../../images/inpSelect.png' : ''}}" class="{{inputActive == 'toNum' ? 'inputActive' : ''}} checkbox" />
+				<view class="name">改为：</view>
+			</view>
+			<input bindtap="focusClick" focus="{{editStockFocus.toNum}}" bindinput="editStockClick" value="{{editStockInputValue.toNum}}" data-type="toNum" />
+		</view>
+		<view class="confirm-edit" bindtap="editConfirm">
+			<button data-type="0" style="background:#fff;height: 90rpx;line-height:50rpx;text-align: center;font-size: 30rpx;color: #676767;font-weight:400;width: 100%;">取消</button>
+			<button data-type="1" style="background:#fff;height: 90rpx;line-height:50rpx;text-align: center;font-size: 30rpx;color: #08B018;font-weight:400;">确认</button>
+		</view>
+	</view>
+</view>
+	<!-- 修改价格 Dialog -->
+	<view class="edit-container" wx:if='{{isShowEditPriceDialog}}'>
+		<view class="edit-dialog">
+			<view class="title">修改价格</view>
+
+			<view class="input-item">
+				<view class="label">
+					<view class="name">售价(元)：</view>
+				</view>
+				<input bindinput="priceInput" value="{{editPriceInputVal.salePrice}}" data-type="0" />
+			</view>
+			<view class="input-item">
+				<view class="label">
+					<view class="name">进价(元)：</view>
+				</view>
+				<input bindinput="priceInput" value="{{editPriceInputVal.price}}" data-type="1" />
+			</view>
+
+			<view class="confirm-edit" bindtap="editPriceConfirm">
+				<button data-type="0" style="background:#fff;height: 90rpx;line-height:50rpx;text-align: center;font-size: 30rpx;color: #676767;font-weight:400;width: 100%;">取消</button>
+				<button data-type="1" style="background:#fff;height: 90rpx;line-height:50rpx;text-align: center;font-size: 30rpx;color: #08B018;font-weight:400;">确认</button>
+			</view>
+		</view>
+
+
 	</view>
