--- a/pages/goodSearch/goodSearch.wxml
+++ b/pages/goodSearch/goodSearch.wxml
@@ -9,6 +9,9 @@
 </view>
 
 <GoodCard wx:if="{{goodsData.length != 0}}" isAllSelected="{{isAllSelected}}" wx:for="{{goodsData}}" wx:key="index" goodsData="{{item}}" index="{{index}}" />
+<view class="null" style="margin: 40rpx auto 90rpx;" wx:if="{{goodsData.length%10 != 0}}">
+		———	已经到底了哟 ———
+</view>
 
 <!-- 底边栏 -->
 <view class="bottom-bar-box">
