--- a/pages/orderDetail/orderDetail.wxss
+++ b/pages/orderDetail/orderDetail.wxss
@@ -164,7 +164,6 @@ border-radius: 6rpx;
   width: 600rpx;
   margin: 150rpx auto;
   display: block;
-
 }
 
 
@@ -268,4 +267,16 @@ border-radius: 6rpx;
   top: -20rpx;
   right: -20rpx;
   border-radius: 0rpx 25rpx 0rpx 25rpx;
+}
+.addPrint {
+  position: absolute;
+  bottom: 40rpx;
+  right: 60rpx;
+  width: 105rpx;
+  color: #fff;
+  text-align: center;
+  border-radius: 50%;
+  width: 120rpx;
+  padding: 15rpx 20rpx;
+  background: linear-gradient(120deg, #FFB910, #FF8200);
 }
